--- a/kperf/assets/index.html
+++ b/kperf/assets/index.html
@@ -14,11 +14,21 @@
 <body>
     <div class="controls">
         <div class="controls-left">
-            <button class="search-button" id="expandAllBtn">Expand All</button>
-            <button class="search-button" id="collapseAllBtn">Collapse All</button>
+            <div class="tabs" role="tablist">
+                <button class="tab-button active" data-tab="function" role="tab">Function Call</button>
+                <button class="tab-button" data-tab="net" role="tab">net</button>
+                <button class="tab-button" data-tab="disk" role="tab">disk</button>
+                <button class="tab-button" data-tab="io" role="tab">io</button>
+            </div>
         </div>
         <div class="controls-right">
-            <button class="help-button" id="helpBtn">Help</button>
+            <button class="help-button" id="searchBtn" aria-label="Search" title="Search">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="opacity:1;"><path d="m21 21l-4.34-4.34"/><circle cx="11" cy="11" r="8"/></svg>
+            </button>
+            <button class="help-button" id="helpBtn" aria-label="Settings" title="Settings">
+                <!-- Gear icon (shadcn-ui style) -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="opacity:1;"><path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0a2.34 2.34 0 0 0 3.319 1.915a2.34 2.34 0 0 1 2.33 4.033a2.34 2.34 0 0 0 0 3.831a2.34 2.34 0 0 1-2.33 4.033a2.34 2.34 0 0 0-3.319 1.915a2.34 2.34 0 0 1-4.659 0a2.34 2.34 0 0 0-3.32-1.915a2.34 2.34 0 0 1-2.33-4.033a2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"/><circle cx="12" cy="12" r="3"/></svg>
+            </button>
         </div>
     </div>
 
@@ -32,11 +42,27 @@
         </div>
     </div>
 
-    <div class="tree-container">
-        <div class="tree"></div>
-        <div class="marked-panel">
-            <h3>Marked Functions</h3>
-            <p class="no-marks">No marks</p>
+    <div class="tab-contents">
+        <div id="tab-function" class="tab-content">
+            <div class="tree-container">
+                <div class="tree"></div>
+                <div class="marked-panel">
+                    <h3>Marked Functions</h3>
+                    <p class="no-marks">No marks</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="tab-net" class="tab-content" style="display:none;">
+            <div class="placeholder">$net</div>
+        </div>
+
+        <div id="tab-disk" class="tab-content" style="display:none;">
+            <div class="placeholder">$disk</div>
+        </div>
+
+        <div id="tab-io" class="tab-content" style="display:none;">
+            <div class="placeholder">$io</div>
         </div>
     </div>
 
