dev: finish basic function call tree

--- a/assets/index.html
+++ b/assets/index.html
@@ -45,7 +45,7 @@
     <div class="tab-contents">
         <div id="tab-function" class="tab-content">
             <div class="tree-container">
-                <div class="tree"></div>
+                $function-tree
                 <div class="marked-panel">
                     <h3>Marked Functions</h3>
                     <p class="no-marks">No marks</p>
@@ -66,7 +66,7 @@
         </div>
 
         <div id="tab-lock" class="tab-content" style="display:none;">
-            <div class="placeholder">$io</div>
+            <div class="placeholder">$lock</div>
         </div>
     </div>
 
@@ -116,6 +116,5 @@
     </div>
 </body>
 <script src="index.js"> </script>
-$websocket-code
 
 </html>
