--- a/assets/index.html
+++ b/assets/index.html
@@ -91,9 +91,6 @@
             <div class="placeholder">$lock</div>
         </div>
     </div>
-
-    <!-- Help modal (static) -->
-    <div class="modal" id="helpModal" style="display: none;">
         <div class="modal-content">
             <span class="modal-close" id="modalClose">&times;</span>
             <h2>Help</h2>
@@ -135,7 +132,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 <script src="index.js"> </script>
 
