--- a/assets/index.html
+++ b/assets/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
+    $css
+    <!-- https://www.shadcn.io/icon/lucide-infinity -->
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2024%2024'%20width='24'%20height='24'%20fill='none'%20stroke='%23000000'%20stroke-width='2'%20stroke-linecap='round'%20stroke-linejoin='round'%20style='opacity:1;'%3E%3Cpath%20fill='none'%20d='M6%2016c5%200%207-8%2012-8a4%204%200%200%201%200%208c-5%200-7-8-12-8a4%204%200%201%200%200%208'/%3E%3C/svg%3E" type="image/svg+xml">
     <title>kperf</title>
 </head>
 
@@ -83,6 +83,5 @@
         </div>
     </div>
 </body>
-<script src="index.js"> </script>
-
+$js
 </html>
