--- a/assets/index.html
+++ b/assets/index.html
@@ -79,13 +79,14 @@
 
     <div class="tab-contents">
         <div id="tab-function" class="tab-content">
-            <div class="tree-container">
+            <div class="tree-container" id="treeContainer">
                 $function-tree
                 <div class="marked-panel">
                     <h3>Marked Functions</h3>
                     <p class="no-marks">No marks</p>
                 </div>
             </div>
+            <div class="flame-container" id="flameContainer" style="display:none;"></div>
         </div>
 
         <div id="tab-net" class="tab-content" style="display:none;">
