dev: set text selected background, add ebpf tab

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,6 +21,7 @@
                 <button class="tab-button" data-tab="disk" role="tab">disk</button>
                 <button class="tab-button" data-tab="io" role="tab">io</button>
                 <button class="tab-button" data-tab="lock" role="tab">lock</button>
+                <button class="tab-button" data-tab="ebpf" role="tab">ebpf</button>
             </div>
         </div>
         <div class="controls-right">
@@ -103,6 +104,10 @@
 
         <div id="tab-lock" class="tab-content" style="display:none;">
             <div class="placeholder">$lock</div>
+        </div>
+
+        <div id="tab-ebpf" class="tab-content" style="display:none;">
+            <div class="placeholder">$ebpf</div>
         </div>
     </div>
 </body>
