dev: add ebpf tab basic code block

--- a/assets/index.html
+++ b/assets/index.html
@@ -103,7 +103,9 @@
         </div>
 
         <div id="tab-ebpf" class="tab-content" style="display:none;">
-            <div class="placeholder">$ebpf</div>
+            <div class="tree-container" id="ebpfContainer">
+                <div class="placeholder">$ebpf</div>
+            </div>
         </div>
     </div>
 </body>
